Added sound structured concurrency: parents cancel children on completion/failure and returned chans settle to values; removed await/wait joining in favor of one-level producer settlement.